welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:27: error: overriding method run in class SimpleBuggle of type ()Unit;
 method run needs `override' modifier
def run() {
    ^PictureMono2:47: error: method faireMotif overrides nothing
override def faireMotif {
             ^